--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
        </ul>
 
-       <button type="button" id="list" >show results</button>
+       <button type="button" id="list" hidden>show results</button>
        
     
 </main>
